--- a/public/index.html
+++ b/public/index.html
@@ -10,3 +10,6 @@
     PetBook static file
 </body>
 </html>
+<script>
+    // This script is just a placeholder to ensure the HTML file is valid.
+    console.log("PetBook static file loaded.");
